umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@rdkit_1471_FC(F)(F)c1cc(ccc1Oc2_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: basic_opensmiles
category: basic_opensmiles
basic_opensmiles:
  success: true
  summary:
    sum_formula: C19ClF3N5O3S2
    atom_count: 33
    bond_count: 36
